--- a/demoaut/pom.xml
+++ b/demoaut/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>selenium-java</artifactId>
             <version>3.141.59</version>
         </dependency>  
+        <dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.10</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
